<resources>
    <string name="app_name">ورکامو</string>
    <string name="appbar_title">لیست وظایف</string>
    <string name="search_hint">جستجو...</string>
    <string name="add_task_title">اضافه کردن وظیفه جدید</string>
    <string name="update_task_title">ویرایش وظیفه</string>
    <string name="title_hint">عنوان</string>
    <string name="priority">الویت</string>
    <string name="today">امروز</string>
    <string name="ok">باشه</string>
    <string name="cancel">بیخیال</string>
    <string name="normal">عادی</string>
    <string name="intermediate">متوسط</string>
    <string name="important">مهم</string>
    <string name="sort_by_date">مرتب کردن بر اساس تاریخ</string>
    <string name="sort_by_priority">مرتب کردن بر اساس الویت</string>
    <string name="delete_all_tasks">پاک کردن تمام کارها</string>
    <string name="empty_tasks_error">هیچ کاری وجود ندارد</string>
    <string name="delete_completed_tasks">پاک کردن کارهای انجام شده</string>
    <string name="empty_completed_tasks_error">هیچ کاری انجام نشده است</string>
    <string name="field_error_text">عنوان نباید خالی باشد!</string>
    <string name="save_task">‌ذخیره</string>
    <string name="channel_name">Reminder Notification</string>
    <string name="channel_description">Remind you at the exact date of tasks.</string>
<!--    <string name="notification_message">یادت نره امروز </string>-->
</resources>